--- a/index.html
+++ b/index.html
@@ -13,10 +13,62 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
-	<!-- Any code that will be visible on your site must be written inside your body element, here -->
+
+	<nav class="navbar navbar-expand-sm navbar-light">
+		<div class="container">
+	  <a class="navbar-brand" href="#">Navbar</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav ml-auto">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Features</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Pricing</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link disabled" href="#">Disabled</a>
+	      </li>
+	    </ul>
+		</div>
+	  </div>
+	</nav>
+
+<div class="jumbotron">
+	<div class="container">
+
+				<div class="col-4">
+				<h2>Animal Planet</h2>
+				<img class= "w-50" src="img/animalplanet.jpg" alt="animal planet">
+				<button>Learn More</button>
+				</div>
 
 
+				<div class="col-4">
+				<h2>Spotify</h2>
+				<img class="w-50" src="img/spotify.jpg" alt="spotify">
+				<button>Learn More</button>
+				</div>
 
 
+				<div class="col-4">
+				<h2>Pinterest</h2>
+				<img class="w-50" src="img/pinterest.jpg" alt="pinterest">
+				<button>Learn More</button>
+				</div>
+
+
+  <h1 class="display-4">Bootstrap</h1>
+  <p class="lead">Bootstrap makes our lives easier.</p>
+  <hr class="my-4">
+  <p>It gives us code that has already been written.</p>
+  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</div>
+</div>
 </body>
 </html>
